Spacing fixes

--- a/src/client/styles/_profile.scss
+++ b/src/client/styles/_profile.scss
@@ -67,19 +67,18 @@
 }
 
 .profile-contact-input {
-	margin-left: 30px;
-	margin-right: 30px
+    text-align: center;
 }
 
 .profile-skills-container {
-	border-bottom: 2px solid $light-grey;
-	margin-bottom: 20px;
+    border-bottom: 2px solid $light-grey;
+    margin-bottom: 20px;
 }
 
 .profile-skills-title {
-	margin: 5px auto;
-	text-align: center;
-	font-weight: 700;
+    margin: 5px auto;
+    text-align: center;
+    font-weight: 700;
 }
 
 .profile-skill-tag-flex {
