--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -1,13 +1,13 @@
 $lato: 'Lato', Helvetica, Ariel, sans-serif;
 $asap: 'Asap', Helvetica, Ariel, sans-serif;
 
-$primary-color: #96E6FA;
-
 $blue: #96E6FA;
 $orange:#FA8840;
-$orange: #ffa600; 
+$orange: #ffa600;
 $grey: #181818;
 $dark-blue: #25393E;
+
+$primary-color: $blue;
 
 $link-primary: $orange;
 $link-secondary: $blue;
@@ -23,4 +23,3 @@ $very-dark-grey: #4F4F51;
 
 $near-white: #FAFAFA;
 $near-black: #333333;
-
